--- a/acsii/src/index.css
+++ b/acsii/src/index.css
@@ -1,10 +1,14 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-body{
+body {
   background-color: black;
   overflow-y: hidden;
 }
+
 .normal-btn {
- top:48rem;
+  top: 48rem;
   position: absolute;
   margin-left: 1rem;
   padding: 0.25rem 0.5rem;
@@ -12,5 +16,5 @@ body{
   color: green;
   border-radius: 5rem;
   cursor: pointer;
-  font-weight: bold;  
+  font-weight: bold;
 }
